# netbox-zpl-labels

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
netbox_zpl_labels/: __init__.py  events.py  filtersets.py  forms.py  graphql.py  jobs.py  models.py  navigation.py  search.py  tables.py  template_content.py  urls.py  views.py
netbox_zpl_labels/api/: __init__.py  serializers.py  urls.py  views.py
netbox_zpl_labels/graphql/: __init__.py
netbox_zpl_labels/migrations/: 0001_initial.py  0002_printjob_genericfk.py  0002_zplprinter_status_tracking.py
netbox_zpl_labels/templates/netbox_zpl_labels/: cable_bulk_print.html  cable_print_label.html  circuit_print_label.html  device_bulk_print.html  device_print_label.html  labeltemplate.html  location_print_label.html  module_print_label.html  powerfeed_print_label.html  powerpanel_print_label.html  printjob.html  rack_print_label.html  site_print_label.html  zplprinter.html
netbox_zpl_labels/templates/netbox_zpl_labels/htmx/: printer_status.html
netbox_zpl_labels/templates/netbox_zpl_labels/inc/: cable_label_panel.html  cable_list_button.html  cable_print_button.html  circuit_label_panel.html  circuit_print_button.html  device_label_panel.html  device_list_button.html  device_print_button.html  location_label_panel.html  location_print_button.html  module_label_panel.html  module_print_button.html  powerfeed_label_panel.html  powerfeed_print_button.html  powerpanel_label_panel.html  powerpanel_print_button.html  rack_label_panel.html  rack_print_button.html  site_label_panel.html  site_print_button.html
netbox_zpl_labels/zpl/: __init__.py  generator.py  preview.py  printer.py  templates.py
scripts/: create_test_data.py
tests/: __init__.py  conftest.py  test_events.py  test_models.py  test_preview.py  test_printer.py  test_templates.py  test_zpl_generator.py
